Revision history for perl distribution Mojo-IRC

0.47 Not Released
 - Passthrough ctcpreply events from Parse::IRC #32
   Contributor: Dominik Hassler
 - Text for NOTICE is in the second param #33
   Contributor: Dan Book

0.46 2020-02-16
 - Fix insecure option for Mojolicious 9.0
 - Add write_p method returning a Mojo::Promise
 - Use promises instead of deprecated and decored Mojo::IOLoop::Delay
 - Deprecated Mojo::IRC::UA

0.45 2018-06-07T14:41:06+0800
 - Add insecure option for invalid certs with Mojolicious 7.80
   Contributor: Dan Book

0.44 2017-02-18T02:50:18+0100
 - Fix Mojo::IRC::UA did not clean up events

0.43 2017-01-14T11:10:32+0100
 - Add "message" event #29
 - Replaced EXPERIMENTAL "irc_any" event with "message" event #29
 - Compatible with Mojolicious 7.18 #29

0.42 2016-11-16T20:04:49+0100
 - Can detect server settings using rpl_isupport()
 - Improved parsing nicks with modes Nordaaker/Convos#287

0.41 2016-11-13T14:01:01+0100
 - Fix parsing nicks with & and % modes Nordaaker/Convos#287

0.40 2016-10-13T09:40:46+0200
 - Add support for JOIN redirects Nordaaker/Convos#284

0.39 2016-09-16T09:34:40+0200
 - Add "host" and "server_info" to Mojo::IRC::UA->whois() output

0.38 2016-09-14T23:10:59+0200
 - Fix matching channel names case insensitive in Mojo::IRC::UA

0.37 2016-09-07T09:17:08+0200
 - Skipping t/ua-mode.t for now. https://github.com/jhthorsen/mojo-irc/issues/28

0.36 2016-09-06T21:31:13+0200
 - Fix t/ua-mode.t #28

0.35 2016-08-29T09:14:48+0200
 - Add Mojo::IRC::UA->kick() method
 - Add Mojo::IRC::UA->mode() method

0.34 2016-08-25T22:44:57+0200
 - Add connect_timeout() attribute

0.33 2016-08-24T22:40:14+0200
 - Fix Mojo::IRC::UA triggered callback on wrong IRC event

0.32 2016-08-24T17:15:41+0200
 - Fix joining channel with key

0.31 2016-04-09T23:49:41+0200
 - Add Test::Mojo::IRC->server attribute
 - Add Test::Mojo::IRC->start_server can be called as a class method
 - Change channel_topic() to return {topic => "..."}